New pointiness attribute doesnt work with displacement #43651

Closed
opened 2015-02-13 06:11:33 +01:00 by Lord Odin · 16 comments

System Information
Windows 10 x64 GTX 970 x2 (not sli)

Blender Version
Broken 4ae6d58

Short description of error
It appears plugging output of the attribute node (even through a ramp node) in to a bump node it doesn't do anything.

Exact steps for others to reproduce the error
plug pointiness attribute in to a bump node

**System Information** Windows 10 x64 GTX 970 x2 (not sli) **Blender Version** Broken 4ae6d58 **Short description of error** It appears plugging output of the attribute node (even through a ramp node) in to a bump node it doesn't do anything. **Exact steps for others to reproduce the error** plug pointiness attribute in to a bump node
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @derekbarker

Added subscriber: @derekbarker
Author

oops sorry I accidentally reported this in the addons bug list.. I guess technically cycles is an addon :P

oops sorry I accidentally reported this in the addons bug list.. I guess technically cycles is an addon :P

Added subscriber: @mont29

Added subscriber: @mont29

Please always attach a .blend demonstrating the issue.

Please always attach a .blend demonstrating the issue.
Author

Maybe you guys should say attach a blend in the description :P

no_bump.blend

Maybe you guys should say attach a blend in the description :P [no_bump.blend](https://archive.blender.org/developer/F143182/no_bump.blend)

It’s explicitly required in our submission template… https://developer.blender.org/maniphest/task/create/?project=2&type=Bug

It’s explicitly required in our submission template… https://developer.blender.org/maniphest/task/create/?project=2&type=Bug
Author

OHHHHHHH snap im sorry that I am blind/retarded xD please forgive me supreme developer overlord master I am not worthy of your replies to my swill

OHHHHHHH snap im sorry that I am blind/retarded xD please forgive me supreme developer overlord master I am not worthy of your replies to my swill
Sergey Sharybin was assigned by Julian Eisel 2015-02-19 15:22:27 +01:00
Member

Added subscribers: @Sergey, @JulianEisel

Added subscribers: @Sergey, @JulianEisel
Member

Not sure if this is supposed to work (and how). Assigning to @Sergey to get his input.

Not sure if this is supposed to work (and how). Assigning to @Sergey to get his input.

This issue was referenced by de4dcda545

This issue was referenced by de4dcda545e80a09fdc4ad61091eb303e4a22e6f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit de4dcda545.

Closed by commit de4dcda545.

Added subscriber: @MarcClintDion

Added subscriber: @MarcClintDion

I've added another bug report with a different node which may have a similar solution to the one found here. https://developer.blender.org/T43755

I've added another bug report with a different node which may have a similar solution to the one found here. https://developer.blender.org/T43755

This issue was referenced by blender/cycles@d96178c968

This issue was referenced by blender/cycles@d96178c96883790e1eae45488a58c07b1b906f8c
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43651
No description provided.