Fix T43651: New pointiness attribute doesn't work with displacement

Simple fix: just make pointiness aware of bump offset.