intern/cycles/render/nodes.cpp
@@ -2242,8 +2242,15 @@ void GeometryNode::compile(SVMCompiler& compiler)
 
 	out = output("Pointiness");
 	if(!out->links.empty()) {
+		NodeType attr_node = NODE_ATTR;
+		if(bump == SHADER_BUMP_DX) {
+			attr_node = NODE_ATTR_BUMP_DX;
+		}
+		else if(bump == SHADER_BUMP_DY) {
+			attr_node = NODE_ATTR_BUMP_DY;
+		}
 		compiler.stack_assign(out);
-		compiler.add_node(NODE_ATTR,
+		compiler.add_node(attr_node,
 		                  ATTR_STD_POINTINESS,
 		                  out->stack_offset,
 		                  NODE_ATTR_FLOAT);
